--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@damienmortini/starter",
+  "name": "@damienmortini/bea-website",
   "version": "0.0.0",
   "private": true,
-  "description": "Web starter",
+  "description": "Béa website",
   "scripts": {
     "start": "server",
     "test": "eslint packages",
