--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@damienmortini/bea-website",
+  "name": "@bea-org/bea-website",
   "version": "0.0.0",
   "private": true,
   "description": "Béa website",
