--- a/packages/bea-website-button/package.json
+++ b/packages/bea-website-button/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "dependencies": {
+    "@damienmortini/core": "^0.2.90",
+    "@damienmortini/element-animation-ticker": "^0.0.88",
     "@damienmortini/element-glslcanvas": "^0.0.1"
   }
 }
